@@ -1,5 +1,12 @@
 2015-10-19  Natalia Portillo  <claunia@claunia.com>
 
+	* Device/Variables.cs:
+	* Device/Constructor.cs:
+	  Having a globally accessed static SCSI Peripheral Device
+	  Type allows easier command filtering.
+
+2015-10-19  Natalia Portillo  <claunia@claunia.com>
+
 	* Device/Constructor.cs:
 	* DiscImageChef.Devices.csproj:
 	  Device type, manufacturer, model, revision and serial number
